Add Page Titles to routes

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - composer require --dev phpunit/phpunit
 
 script:
-  - phpunit tests/ExampleTest.php
+  - phpunit tests/PageTest.php
 
 notifications:
   slack:
